--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/three/
 /node_modules
 /.pnp
 .pnp.js
@@ -34,3 +35,36 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+# Node.js
+node_modules/
+dist/
+build/
+*.log
+*.env
+*.local
+*.lock
+.DS_Store
+.vscode/
+.idea/
+.npm/
+
+# Next.js
+.next/
+out/
+
+# OS-specific
+Thumbs.db
+Desktop.ini
+
+# MacOS
+.DS_Store
+
+# Windows
+*.exe
+*.dll
+*.pdb
+
+# Linux
+*.so
