--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.5",
     "@react-three/fiber": "^8.16.8",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.166.1"
@@ -27,7 +28,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^8",
     "eslint-config-next": "^14.2.5",
-    "postcss": "^8",
+    "postcss": "^8.4.40",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
