--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "styled-jsx": "^5.1.6",
     "three": "^0.166.1"
   },
   "devDependencies": {
