--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
     "@react-three/fiber": "^8.16.8",
     "next": "^14.2.5",
     "react": "^18",
