--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/stats.js": "^0.17.3",
     "@types/three": "^0.166.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8",
