--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@opentelemetry/api": "^1.9.0",
     "@react-three/fiber": "^8.16.8",
+    "microcms-ts-sdk": "^1.2.0",
     "next": "^14.2.5",
     "react": "^18",
     "react-dom": "^18",
