--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.8",
+    "@heroicons/react": "^2.1.5",
     "@opentelemetry/api": "^1.9.0",
     "@react-three/fiber": "^8.16.8",
     "html-react-parser": "^5.1.13",
